Add fix to index html for deployment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/basis-admin-flutter/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -27,10 +27,13 @@
   <meta name="apple-mobile-web-app-title" content="flutter_application_6_provider">
   <link rel="apple-touch-icon" href="./icons/Icon-192.png">
 
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="./favicon.png" />
 
-  <title>flutter_application_6_provider</title>
+  <title>Basis PPC Admin</title>
   <link rel="manifest" href="./manifest.json">
 </head>
 
