--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 
   <title>Basis PPC Admin</title>
   <link rel="manifest" href="./manifest.json">
+</head>
 
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3607859821';
+    var serviceWorkerVersion = '1708498659';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
