--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <base href="/">
   <base href="/basis-admin-flutter/">
 
   <meta charset="UTF-8">
@@ -42,7 +43,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1708498659';
+    var serviceWorkerVersion = '2858236089';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
